<resources>
    <string name="app_name">ViewPager</string>
    <string name="skip">skip</string>
    <string name="conts">Continue</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_fragment">Demo Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="contacts">Contacts</string>
    <string name="setting">Settings</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="youtube_tutorial">YouTube Tutorial</string>
    <string name="code_snipples">Code Snipples</string>
    <string name="detail_activity_in_android">Detail Activity in Android</string>


</resources>
