<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".fragment.CodeFragment">

    <ImageView
        android:id="@+id/iv_codeimage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleY=".5"
        android:layout_centerInParent="true"
        android:scaleX=".5"
        android:src="@drawable/ic_undraw_my_code_snippets"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_codetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_codeimage"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/code_snipples"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_previous_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/dimen12dp"
        android:gravity="end"
        android:layout_alignParentBottom="true"
        />


    <TextView
        android:id="@+id/tv_next_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/dimen12dp"
        android:gravity="end"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
