<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".fragment.MobileFragment">

    <ImageView
        android:id="@+id/iv_mobiledevelopment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleY=".5"
        android:layout_centerInParent="true"
        android:scaleX=".5"
        android:src="@drawable/ic_undraw_mobile_development"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_mobiletext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:layout_below="@id/iv_mobiledevelopment"
        android:text="@string/mobile_development"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/dimen12dp"
        android:textAlignment="viewEnd"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
